# fastapi_test_task

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  config.py  db_filling_script.py  docker-compose-local.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: checks.yml
admin_panel/: admin_models.py
apps/customer/: models.py  routers.py  schemas.py  services.py
apps/order/: filter.py  models.py  routers.py  schemas.py  services.py
apps/store/: models.py  services.py
apps/visit/: filter.py  models.py  routers.py  schemas.py  services.py
apps/worker/: filter.py  models.py  routers.py  schemas.py  services.py
db/: base.py  session.py
migrations/: env.py
migrations/versions/: fc1cffe0508a_create_tables.py
tests/: conftest.py
tests/test_order/: test_create_order.py  test_order_delete.py  test_order_update.py
tests/test_worker/: test_get_workers.py
